--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ footer, header {
 footer {
   display: flex;
   justify-content: center;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 h1 {
@@ -50,8 +50,12 @@ h1 {
   font-weight: 800;
 }
 
-img {
-  width: 10rem;
+.choices {
+  width: 5rem;
+}
+
+.mickey-image {
+  width: 20rem;
 }
 
 .button, .counter {
@@ -60,7 +64,7 @@ img {
 }
 
 .content {
-  padding: 6rem 6rem 0rem 6rem;
+  padding: 3rem 6rem 3rem 6rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -68,7 +72,7 @@ img {
 
 .container {
   display: flex;
-  gap: 4rem;
+  gap: 3rem;
 }
 
 .button {
@@ -101,10 +105,14 @@ img {
   padding: 3rem;
 }
 
-.logo {
-  width: 500px;
-  text-align: center;
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
 }
 
+.larger-text {
+  font-size: 3rem;
+}
 
 
